[tool.poetry]
name = "hw-16"
version = "0.1.0"
description = "Home work for QA.GURU"
authors = ["Varganova Kate"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
selene = "2.0.0rc2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
